--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,13 @@
 
 @layer components {
     .titulo_cmp_card {
-        @apply font-bold text-lg pl-4 py-2 bg-white;
+        @apply font-bold text-3xl pl-4 py-2 bg-white;
     }
     .card {
         @apply w-11/12 bg-white m-auto my-2 rounded-lg shadow-md shadow-black/30 flex;
     }
     .img {
-        @apply w-1/3 bg-red-200 rounded-lg;
+        @apply w-1/3 rounded-lg;
     }
     .info {
         @apply  p-1;
@@ -19,9 +19,12 @@
         @apply  font-bold text-lg;
     }
     .cmp_preco {
-        @apply flex justify-between;
+        @apply flex justify-between mt-7;
     }
     .preco_info {
-        @apply font-semibold;
+        @apply font-semibold absolute bottom-1;
+    }
+    .span_preco {
+        @apply right-1;
     }
 }
