--- a/styles/output.css
+++ b/styles/output.css
@@ -640,6 +640,13 @@ video {
   right: 0.25rem;
 }
 
+.selected {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -739,10 +746,6 @@ video {
   z-index: 30;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .float-start {
   float: inline-start;
 }
@@ -826,14 +829,6 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
 }
 
 .box-border {
@@ -2216,14 +2211,6 @@ video {
   padding-right: 1.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-11 {
-  padding-top: 2.75rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
 }
@@ -2836,6 +2823,21 @@ video {
 
 .after\:content-\[\'05\'\]::after {
   --tw-content: '05';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\"05\"\]::after {
+  --tw-content: "05";
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'\$\{arrayCar\.length\}\'\]::after {
+  --tw-content: '${arrayCar.length}';
+  content: var(--tw-content);
+}
+
+.after\:content-\[attr\(data-content\)\]::after {
+  --tw-content: attr(data-content);
   content: var(--tw-content);
 }
 
