--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.campo__endereco input, .campo__endereco select {
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 2px 0 2px 10px;
+}
+
 @layer components {
     .titulo_cmp_card {
         @apply font-bold text-3xl pl-4 py-2 bg-white;
